manifest/objects/Apttus__Agreement_Protection__c.object
<CustomObject>
    <description>Specifies protection settings for agreements generated by the Apttus Contract Wizard and maintained by the Apttus Contract Author</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <description>Agreement action to specify protection settings for.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview Agreement</fullName>
                </value>
                <value>
                    <fullName>Generate Agreement</fullName>
                </value>
                <value>
                    <fullName>Auto Generate Agreement</fullName>
                </value>
                <value>
                    <fullName>Generate Supporting Document</fullName>
                </value>
                <value>
                    <fullName>Regenerate Agreement</fullName>
                </value>
                <value>
                    <fullName>Create Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Import Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Save Internal Version</fullName>
                </value>
                <value>
                    <fullName>Save External Version</fullName>
                </value>
                <value>
                    <fullName>Save Final Version</fullName>
                </value>
                <value>
                    <fullName>Send To Other Party For Review</fullName>
                </value>
                <value>
                    <fullName>Send To Other Party For Signatures</fullName>
                </value>
                <value>
                    <fullName>Merge Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Description of the agreement protection rule.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Profile_Name__c</fullName>
        <description>Name of the profile the protection rule applies to.  This name should be exactly the same as a profile in Salesforce, for example, &quot;System Administrator&quot; or &quot;Standard User&quot;.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Protection_Level__c</fullName>
        <description>Protection level applied to the Word document when an agreement is generated.</description>
        <label>Protection Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Protection_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Full access</fullName>
                </value>
                <value>
                    <fullName>Insert comments and tracked changes only</fullName>
                </value>
                <value>
                    <fullName>Insert comments only</fullName>
                </value>
                <value>
                    <fullName>Fill in form fields only</fullName>
                </value>
                <value>
                    <fullName>Read only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Protection_Type__c</fullName>
        <description>Type of protection (none, prompt user, or automatically assigned by the system).</description>
        <label>Protection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                    <default>true</default>
                    <label>Ignore</label>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Unprotect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Protection</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Profile_Name__c</columns>
        <columns>Apttus__Action__c</columns>
        <columns>Apttus__Protection_Type__c</columns>
        <columns>Apttus__Protection_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_Agreement_Protection</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Protection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>